# plover-full-keyboard-steno

./: README.md  full-qwerty.json  plover_full_keyboard_steno.py  setup.cfg
