[metadata]
name = plover_full_keyboard_steno
version = 1.0.0
description = Plover plugin for using a full keyboard layout for steno, useful for multiple languages
long_description = file:README.md
long_description_content_type = text/markdown
author = Emily Easteal
author_email = emily@easteal.dev
url = https://github.com/EPLHREU/plover-full-keyboard-steno
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
install_requires =
  plover
py_modules =
  plover_full_keyboard_steno

[options.entry_points]
plover.system =
 Full Keyboard Steno = plover_full_keyboard_steno
